--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -40,6 +40,15 @@
         android:textStyle="bold"
         android:layout_marginBottom="8dp" />
 
+    <!-- Stock -->
+    <TextView
+        android:id="@+id/product_stock"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textStyle="bold"
+        android:layout_marginBottom="8dp" />
+
     <!-- Deskripsi (expand on click) -->
     <TextView
         android:id="@+id/product_desc"
