Added edit and delete product on seller-side, added stock visibility on seller-side

--- a/app/src/main/res/layout/item_rekomendasi.xml
+++ b/app/src/main/res/layout/item_rekomendasi.xml
@@ -45,6 +45,14 @@
                 android:layout_marginTop="8dp"
                 android:text="Rp 0"
                 android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/rekomendasi_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Rp 0"
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
