tipen - ganti text button

--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -25,7 +25,7 @@
         android:id="@+id/btn_go_to_beli"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Beli Lagi"
+        android:text="Kembali ke Home"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/purple_500"
         android:textColor="@android:color/white" />
