use SharedPreferences for dynamic account info (seller, buyer)

--- a/app/src/main/res/menu/seller_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/seller_bottom_nav_menu.xml
@@ -8,4 +8,9 @@
         android:id="@+id/jualFragment"
         android:icon="@drawable/ic_add"
         android:title="Tambah Produk" />
+
+    <item
+        android:id="@+id/accountFragment"
+        android:icon="@drawable/ic_person"
+        android:title="Akun" />
 </menu>
