--- a/app/src/main/res/navigation/seller_mobile_nav.xml
+++ b/app/src/main/res/navigation/seller_mobile_nav.xml
@@ -26,5 +26,16 @@
         android:id="@+id/jualFragment"
         android:name="com.example.miniprojectv2.JualFragment"
         android:label="Tambah Produk"
-        tools:layout="@layout/fragment_jual"/>
+        tools:layout="@layout/fragment_jual">
+        <action
+            android:id="@+id/action_jualFragment_to_accountFragment"
+            app:destination="@id/accountFragment" />
+    </fragment>
+
+    <!-- Account -->
+    <fragment
+        android:id="@+id/accountFragment"
+        android:name="com.example.miniprojectv2.AccountFragment"
+        android:label="Account"
+        tools:layout="@layout/fragment_account" />
 </navigation>
