--- a/app/src/main/res/navigation/mobile_nav.xml
+++ b/app/src/main/res/navigation/mobile_nav.xml
@@ -66,11 +66,10 @@
         <action
             android:id="@+id/action_checkout_to_transaction"
             app:destination="@id/transactionsFragment"
-            app:popUpTo="@id/checkoutFragment"
-            app:popUpToInclusive="true" />
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="false"
+            app:launchSingleTop="true" />
     </fragment>
-
-
 
 
     <!-- Transactions -->
