--- a/app/src/main/res/layout/fragment_beli.xml
+++ b/app/src/main/res/layout/fragment_beli.xml
@@ -20,6 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="8dp"
         android:layout_marginBottom="12dp"
         android:background="@drawable/bg_search"
         android:gravity="center_vertical"
