tipen - tambahin rating, dan review pembeli (masih hardcode)

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,6 +8,10 @@
         android:id="@+id/transactionsFragment"
         android:icon="@drawable/ic_history"
     android:title="Transaksi" />
+<!--    <item-->
+<!--        android:id="@+id/statusFragment"-->
+<!--        android:icon="@drawable/ic_status"-->
+<!--        android:title="Status" />-->
     <item
         android:id="@+id/accountFragment"
         android:icon="@drawable/ic_person"
