Added seller-buyer ordering lifecycle (status, add expedition)

--- a/app/src/main/res/menu/seller_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/seller_bottom_nav_menu.xml
@@ -10,6 +10,11 @@
         android:title="Tambah Produk" />
 
     <item
+        android:id="@+id/ordersFragment"
+        android:icon="@drawable/ic_orders"
+        android:title="Pesanan" />
+
+    <item
         android:id="@+id/accountFragment"
         android:icon="@drawable/ic_person"
         android:title="Akun" />
