--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -39,6 +39,13 @@
         android:layout_marginBottom="12dp"/>
 
     <Button
+        android:id="@+id/btn_add_expedition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tambah Expedisi"
+        android:visibility="gone" /> <!-- default hidden -->
+
+    <Button
         android:id="@+id/btn_logout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
