--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -46,6 +46,13 @@
                 android:layout_height="wrap_content"
                 android:text="Rp 0"
                 android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/product_stock"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Stock : "
+                android:textSize="14sp" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
