--- a/app/src/main/res/layout/item_rekomendasi.xml
+++ b/app/src/main/res/layout/item_rekomendasi.xml
@@ -3,7 +3,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rekomendasi_tile"
     android:layout_width="180dp"
-    android:layout_height="130dp"
+    android:layout_height="120dp"
     android:layout_margin="8dp"
     card_view:cardCornerRadius="12dp"
     card_view:cardElevation="6dp">
@@ -46,13 +46,13 @@
                 android:text="Rp 0"
                 android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/rekomendasi_stock"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Rp 0"
-                android:textSize="14sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/rekomendasi_stock"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="8dp"-->
+<!--                android:text="Rp 0"-->
+<!--                android:textSize="14sp" />-->
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
