--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#421497"
+    android:background="#0C3B2E"
     tools:context=".RegisterActivity">
 
     <!-- White rounded bottom half with elevation -->
@@ -36,7 +36,7 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginBottom="24dp"
                 android:text="Register"
-                android:textColor="@color/black"
+                android:textColor="#0C3B2E"
                 android:textSize="34sp"
                 android:textStyle="bold" />
 
@@ -126,7 +126,7 @@
                 android:text="Save Changes"
                 android:textAllCaps="false"
                 android:textColor="@android:color/white"
-                app:backgroundTint="@color/purple_500"
+                app:backgroundTint="#6D9773"
                 app:cornerRadius="16dp"
                 app:elevation="6dp" />
 
