--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -41,6 +41,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Konfirmasi Checkout"
-        android:backgroundTint="@color/purple_500"
+        android:backgroundTint="#6D9773"
         android:textColor="@android:color/white" />
 </LinearLayout>
