--- a/app/src/main/res/layout/activity_seller.xml
+++ b/app/src/main/res/layout/activity_seller.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/seller_toolbar"
                 android:layout_width="0dp"
                 android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
+                android:background="#0C3B2E"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                 android:title="Seller Dashboard"
                 app:layout_constraintTop_toTopOf="parent"
