--- a/app/src/main/res/layout/dialog_edit_account.xml
+++ b/app/src/main/res/layout/dialog_edit_account.xml
@@ -3,7 +3,10 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#6D9773"
+    android:textColor="@android:color/white">
+
 
     <EditText
         android:id="@+id/et_edit_name"
@@ -11,12 +14,17 @@
         android:layout_height="wrap_content"
         android:hint="Nama"
         android:inputType="textPersonName"
-        android:layout_marginBottom="12dp"/>
+        android:layout_marginBottom="12dp"
+        android:textColor="@android:color/white"
+        />
 
     <EditText
         android:id="@+id/et_edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:inputType="textEmailAddress"/>
+        android:textColor="@android:color/white"
+        android:inputType="textEmailAddress"
+        />
+
 </LinearLayout>
