--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -31,5 +31,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Checkout"
+        android:backgroundTint="#6D9773"
         android:layout_marginTop="16dp"/>
 </LinearLayout>
