--- a/app/src/main/res/layout/fragment_detail_pesanan.xml
+++ b/app/src/main/res/layout/fragment_detail_pesanan.xml
@@ -98,6 +98,8 @@
             android:id="@+id/btn_submit_review"
             android:text="Kirim Ulasan"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6D9773"
+            android:textColor="@android:color/white"/>
     </LinearLayout>
 </ScrollView>
