--- a/app/src/main/res/layout/fragment_jual.xml
+++ b/app/src/main/res/layout/fragment_jual.xml
@@ -21,7 +21,9 @@
             android:text="Pilih Gambar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="8dp"
+            android:backgroundTint="#6D9773"
+            android:textColor="@android:color/white"/>
 
         <EditText
             android:id="@+id/input_name"
@@ -60,7 +62,9 @@
             android:text="Tambah Produk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="12dp"
+            android:backgroundTint="#6D9773"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
 </ScrollView>
