--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,24 +3,33 @@
 
     <!-- Tema utama aplikasi -->
     <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Customize warna utama -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!-- Warna utama -->
+        <item name="colorPrimary">#0C3B2E</item>
+        <item name="colorPrimaryVariant">#6D9773</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- Warna sekunder -->
+        <item name="colorSecondary">#FFBA00</item>
+        <item name="colorSecondaryVariant">#B46617</item>
+        <item name="colorOnSecondary">@android:color/black</item>
+
+        <!-- Status bar -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
     <!-- Tema tanpa ActionBar (dipakai di AndroidManifest) -->
     <style name="Theme.App.NoActionBar" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <!-- Warna utama -->
+        <item name="colorPrimary">#0C3B2E</item>
+        <item name="colorPrimaryVariant">#6D9773</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+
+        <!-- Warna sekunder -->
+        <item name="colorSecondary">#FFBA00</item>
+        <item name="colorSecondaryVariant">#B46617</item>
+        <item name="colorOnSecondary">@android:color/black</item>
+
+        <!-- Status bar -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
 
