Change some other colors (themes)

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -44,7 +44,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tambah Expedisi"
-        android:visibility="gone" /> <!-- default hidden -->
+        android:visibility="gone"
+        android:backgroundTint="#6D9773"/> <!-- default hidden -->
 
     <Button
         android:id="@+id/btn_logout"
