--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Warna utama (ungu) -->
-    <color name="purple_200">#BB86FC</color>
-    <color name="purple_500">#6200EE</color>
-    <color name="purple_700">#3700B3</color>
+    <color name="purple_200">#0C3B2E</color>
+    <color name="purple_500">#6D9773</color>
+    <color name="purple_700">#FFBA00</color>
 
     <!-- Warna sekunder (teal) -->
     <color name="teal_200">#03DAC5</color>
