--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,9 @@
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp">
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="@color/purple_500"
+                app:hintTextColor="@color/purple_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/username_input"
@@ -68,7 +70,9 @@
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp">
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="@color/purple_500"
+                app:hintTextColor="@color/purple_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/password_input"
