--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -66,7 +66,9 @@
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp">
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="@color/purple_500"
+                app:hintTextColor="@color/purple_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_username_input"
@@ -86,7 +88,9 @@
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp">
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="@color/purple_500"
+                app:hintTextColor="@color/purple_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_password_input"
@@ -107,7 +111,9 @@
                 app:boxCornerRadiusBottomEnd="16dp"
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp">
+                app:boxCornerRadiusTopStart="16dp"
+                app:boxStrokeColor="@color/purple_500"
+                app:hintTextColor="@color/purple_200">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_email_input"
